--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
+# Ignore these so they're not stored in source control
+.vscode
+/node_modules/
+package-lock.json
+/docs/build.css
+/tmp/
